Minor fixes. Nav Upper still too wide.. hopefully it's fixed now. Sidebar no longer scrollable. Toshi about screen should no longer be overlapping with footer

--- a/frontend/src/App/styles/components/navigation/_nav.scss
+++ b/frontend/src/App/styles/components/navigation/_nav.scss
@@ -21,6 +21,10 @@
       height: 100%;
       width: 7.3rem;
 
+      @media ( max-width: 450px ) {
+        width: 7.0rem;
+      }
+
       @media ( max-width: 350px ) {
         width: 6.8rem;
       }
@@ -48,6 +52,10 @@
 
       @media ( max-width: 500px ) {
         padding: 0 2rem;
+      }
+
+      @media ( max-width: 450px ) {
+        padding: 0 1.6rem;
       }
 
       @media ( max-width: 400px ) {
