--- a/frontend/src/App/styles/components/navigation/_sidebar.scss
+++ b/frontend/src/App/styles/components/navigation/_sidebar.scss
@@ -13,6 +13,8 @@
       justify-content: space-around;
       margin-top: 0;
       width: 100vw;
+      height: 100%;
+      align-items: center;
     }
 
     @media (max-width: 950px) and (max-height: 450px) {
